--- a/index.html
+++ b/index.html
@@ -39,7 +39,31 @@
 				</div>
 				<div class="page-inner mt--5">
 					<div class="row mt--2">
-						<div class="col-md-6">
+						<div class="col-md-4">
+							<div class="card full-height">
+								<div class="card-body">
+									<div class="card-title">Total income & spend statistics</div>
+									<div class="row py-3">
+										<div class="col-md-4 d-flex flex-column justify-content-around">
+											<div>
+												<h6 class="fw-bold text-uppercase text-success op-8">Total Income</h6>
+												<h3 class="fw-bold">$9.782</h3>
+											</div>
+											<div>
+												<h6 class="fw-bold text-uppercase text-danger op-8">Total Spend</h6>
+												<h3 class="fw-bold">$1,248</h3>
+											</div>
+										</div>
+										<div class="col-md-8">
+											<div id="chart-container">
+												<canvas id="totalIncomeChart"></canvas>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-8">
 							<div class="card full-height">
 								<div class="card-body">
 									<div class="card-title">Overall statistics</div>
@@ -65,30 +89,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="card full-height">
-								<div class="card-body">
-									<div class="card-title">Total income & spend statistics</div>
-									<div class="row py-3">
-										<div class="col-md-4 d-flex flex-column justify-content-around">
-											<div>
-												<h6 class="fw-bold text-uppercase text-success op-8">Total Income</h6>
-												<h3 class="fw-bold">$9.782</h3>
-											</div>
-											<div>
-												<h6 class="fw-bold text-uppercase text-danger op-8">Total Spend</h6>
-												<h3 class="fw-bold">$1,248</h3>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<div id="chart-container">
-												<canvas id="totalIncomeChart"></canvas>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-8">
@@ -96,24 +96,10 @@
 								<div class="card-header">
 									<div class="card-head-row">
 										<div class="card-title">User Statistics</div>
-										<div class="card-tools">
-											<!-- <a href="#" class="btn btn-info btn-border btn-round btn-sm mr-2">
-												<span class="btn-label">
-													<i class="fa fa-pencil"></i>
-												</span>
-												Export
-											</a>
-											<a href="#" class="btn btn-info btn-border btn-round btn-sm">
-												<span class="btn-label">
-													<i class="fa fa-print"></i>
-												</span>
-												Print
-											</a> -->
-										</div>
 									</div>
 								</div>
 								<div class="card-body">
-									<div id="chartdiv" class="chart-container" style="min-height: 430px">
+									<div id="chartdiv" class="chart-container" style="min-height: 600px">
 									</div>
 								</div>
 							</div>
@@ -124,13 +110,7 @@
 									<div class="card-title">Daily Sales</div>
 									<div class="card-category">March 25 - April 02</div>
 								</div>
-								<div class="card-body pb-0">
-									<div class="mb-4 mt-2">
-										<h1>$4,578.58</h1>
-									</div>
-									<div class="pull-in">
-										<canvas id="dailySalesChart"></canvas>
-									</div>
+								<div id="chartdiv2" class="card-body pb-0" style="min-height: 450px;">
 								</div>
 							</div>
 							<div class="card">
@@ -421,9 +401,11 @@
 									<h4 class="mt-5 pb-3 mb-0 fw-bold">Top active pages</h4>
 									<ul class="list-unstyled">
 										<li class="d-flex justify-content-between pb-1 pt-1">
-											<small>/product/readypro/index.html</small> <span>7</span></li>
+											<small>/product/readypro/index.html</small> <span>7</span>
+										</li>
 										<li class="d-flex justify-content-between pb-1 pt-1">
-											<small>/product/atlantis/demo.html</small> <span>10</span></li>
+											<small>/product/atlantis/demo.html</small> <span>10</span>
+										</li>
 									</ul>
 								</div>
 							</div>
@@ -696,7 +678,7 @@
 					label: "Total Income",
 					backgroundColor: '#ff9e27',
 					borderColor: 'rgb(23, 125, 255)',
-					data: [6, 4, 9, 5, 4, 6, 4, 3, 8, 10],
+					data: [6, 4, 9, 5, 4, 6, 4, 3, 8, 15],
 				}],
 			},
 			options: {
