--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
 										<div class="px-2 pb-2 pb-md-0 text-center">
 											<div id="circles-1"></div>
-											<a onclick="createCircles('circles-1', 68, 90)"
+											<a onclick="createColumns()"
 												style="text-decoration: none; cursor: pointer;">
 												<h6 id="circles-1-title" class="fw-bold mt-3 mb-0"></h6>
 											</a>
@@ -165,7 +165,7 @@
 									<div class="row">
 										<div class="col-md-6">
 											<div class="table-responsive table-hover table-sales">
-												<table class="table">
+												<!-- <table class="table">
 													<tbody>
 														<tr>
 															<td>
@@ -253,7 +253,7 @@
 															</td>
 														</tr>
 													</tbody>
-												</table>
+												</table> -->
 											</div>
 										</div>
 										<div class="col-md-6">
@@ -272,7 +272,7 @@
 								<div class="card-header">
 									<div class="card-title">Top Products</div>
 								</div>
-								<div class="card-body pb-0">
+								<!-- <div class="card-body pb-0">
 									<div class="d-flex">
 										<div class="avatar">
 											<img src="assets/img/logoproduct.svg" alt="."
@@ -318,7 +318,7 @@
 									<div class="pull-in">
 										<canvas id="topProductsChart"></canvas>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-4">
@@ -326,7 +326,7 @@
 								<div class="card-body">
 									<div class="card-title fw-mediumbold">Suggested People</div>
 									<div class="card-list">
-										<div class="item-list">
+										<!-- <div class="item-list">
 											<div class="avatar">
 												<img src="assets/img/jm_denis.jpg" alt="."
 													class="avatar-img rounded-circle">
@@ -403,7 +403,7 @@
 											<button class="btn btn-icon btn-primary btn-round btn-xs">
 												<i class="fa fa-plus"></i>
 											</button>
-										</div>
+										</div> -->
 									</div>
 								</div>
 							</div>
@@ -640,7 +640,7 @@
 	<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 
 	<!-- Charts -->
-	<script src="assets/js/charts/demo1.js"></script>
+	<script src="assets/js/charts/columns.js"></script>
 	<script src="assets/js/charts/circles.js"></script>
 	<script src="assets/js/charts/kham-noi-ngoai.js"></script>
 
