Fix code charts

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
 										<div class="px-2 pb-2 pb-md-0 text-center">
 											<div id="circles-1"></div>
-											<a onclick="createColumns('circles-1', '00', '06/01/2022', '07/01/2022')"
+											<a onclick="createColumns('circles-1', '00')"
 												style="text-decoration: none; cursor: pointer;">
 												<h6 id="circles-1-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-1-id" style="display: none;"></div>
@@ -87,7 +87,7 @@
 										</div>
 										<div class="px-2 pb-2 pb-md-0 text-center">
 											<div id="circles-2"></div>
-											<a onclick="createColumns('circles-2', '00', '06/01/2022', '07/01/2022')"
+											<a onclick="createColumns('circles-2', '00')"
 												style="text-decoration: none; cursor: pointer;">
 												<h6 id="circles-2-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-2-id" style="display: none;"></div>
