Fix code cuoi ngay

--- a/index.html
+++ b/index.html
@@ -145,12 +145,11 @@
 							</div>
 						</div>
 						<div class="col-md-4">
-							<div class="card card-info">
+							<div class="card card-primary">
 								<div class="card-header">
 									<div class="card-title">Daily Sales</div>
-									<div class="card-category">March 25 - April 02</div>
 								</div>
-								<div id="chartdiv2" class="card-body pb-0" style="min-height: 255px;">
+								<div id="chartdiv2" class="chart-container" style="padding-bottom: 10px; min-height: 255px;">
 								</div>
 							</div>
 							<div class="card">
@@ -664,6 +663,7 @@
 
 	<!-- Charts -->
 	<script src="assets/js/charts/column-with-rotated-labels.js"></script>
+	<script src="assets/js/charts/line-graph.js"></script>
 	<script src="assets/js/charts/details.js"></script>
 	<script src="assets/js/charts/circles.js"></script>
 	<script src="assets/js/charts/total-income.js"></script>
