--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 												<div id="circles-1"></div>
 												<h6 id="circles-1-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-1-id" style="display: none;"></div>
+												<div id="circles-1-type" style="display: none;"></div>
 											</a>
 										</div>
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -91,6 +92,7 @@
 												<div id="circles-2"></div>
 												<h6 id="circles-2-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-2-id" style="display: none;"></div>
+												<div id="circles-2-type" style="display: none;"></div>
 											</a>
 										</div>
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -99,6 +101,7 @@
 												<div id="circles-3"></div>
 												<h6 id="circles-3-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-3-id" style="display: none;"></div>
+												<div id="circles-3-type" style="display: none;"></div>
 											</a>
 										</div>
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -107,6 +110,7 @@
 												<div id="circles-4"></div>
 												<h6 id="circles-4-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-4-id" style="display: none;"></div>
+												<div id="circles-4-type" style="display: none;"></div>
 											</a>
 										</div>
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -115,6 +119,7 @@
 												<div id="circles-5"></div>
 												<h6 id="circles-5-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-5-id" style="display: none;"></div>
+												<div id="circles-5-type" style="display: none;"></div>
 											</a>
 										</div>
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -123,6 +128,7 @@
 												<div id="circles-6"></div>
 												<h6 id="circles-6-title" class="fw-bold mt-3 mb-0"></h6>
 												<div id="circles-6-id" style="display: none;"></div>
+												<div id="circles-6-type" style="display: none;"></div>
 											</a>
 										</div>
 									</div>
@@ -139,7 +145,7 @@
 									</div>
 								</div>
 								<div class="card-body">
-									<div id="column-1" class="chart-container" style="min-height: 440px">
+									<div id="column-1" class="chart-container" style="padding-top: -5px; min-height: 440px">
 									</div>
 								</div>
 							</div>
