--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Phương Châu Dashboard</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+	<meta name="theme-color" content="#0F5CC0" />
 	<link rel="icon" href="assets/img/icon.ico" type="image/x-icon" />
 
 	<!-- CSS Files -->
