--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 									<div class="card-title">Chi tiết</div>
 								</div>
 								<div id="chartdiv2" class="chart-container"
-									style="padding-bottom: 10px; min-height: 255px;">
+									style="padding-bottom: 10px; min-height: 400px;">
 								</div>
 							</div>
-							<div class="card">
+							<!-- <div class="card">
 								<div class="card-body pb-0">
 									<div class="h1 fw-bold float-right text-warning">+7%</div>
 									<h2 class="mb-2">213</h2>
@@ -172,7 +172,7 @@
 									<div class="pull-in sparkline-fix">
 										<div id="lineChart"></div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
