Don dep file rac

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Phương Châu Dashboard</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<meta name="theme-color" content="#0F5CC0" />
-	<link rel="icon" href="assets/img/icon.ico" type="image/x-icon" />
+	<link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
 
 	<!-- CSS Files -->
 	<style>
